...
              ))}
            </View>
          </View>
        )}
      />

      <FormError testID="home-new-category-error">{form.formState.errors.root?.message}</FormError>

      <Button
        variant="primary"
        text="Создать"
        loading={form.formState.isSubmitting || createCategory.isPending}
        disabled={createCategory.isPending}
...
